--- a/charts/monitoring-logging/templates/configmap.yaml
+++ b/charts/monitoring-logging/templates/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Values.grafana.dashboardsConfigMaps.default }}
+  namespace: podiumd
   labels:
     grafana_dashboard: "1"
 data:
