--- a/charts/podiumd/templates/api-proxy-configmap.yaml
+++ b/charts/podiumd/templates/api-proxy-configmap.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ default "api-proxy" .Values.apiproxy.nameOverride }}-nginx-config
 data:
   nginx.conf: |
-    user nginx;
+    pid /tmp/nginx.pid;
     worker_processes auto;
     error_log /var/log/nginx/error.log notice;
 
