--- a/charts/monitoring-logging/loki/values.yaml
+++ b/charts/monitoring-logging/loki/values.yaml
@@ -1,4 +1,10 @@
 loki:
+  image:
+    digest: null
+    pullPolicy: IfNotPresent
+    registry: docker.io
+    repository: grafana/loki
+    tag: ""
   schemaConfig:
     configs:
       - from: 2024-04-01
@@ -13,13 +19,6 @@ loki:
 
   frontend:
     max_outstanding_per_tenant: 6144 # Queue size for parallel processing
-    
-  image:
-    digest: null
-    pullPolicy: IfNotPresent
-    registry: docker.io
-    repository: grafana/loki
-    tag: ""
     
   ingester:
     chunk_encoding: snappy
@@ -140,3 +139,12 @@ test:
 
 lokiCanary:
   enabled: false
+
+gateway:
+  basicAuth:
+    # -- Enables basic authentication for the gateway
+    enabled: true
+    # -- The basic auth username for the gateway
+    username: ""
+    # -- The basic auth password for the gateway
+    password: ""
