--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1069,6 +1069,7 @@ apiproxy:
     pullPolicy: IfNotPresent
   service:
     port: 80
+    containerPort: 8080
   resources:
     limits:
       cpu: "0.5"
