Feat: updates for version 4.0.6 (#73)
fixes for apiproxy health check port

---------

Co-authored-by: PascalIcatt <38104517+PascalIcatt@users.noreply.github.com>

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1069,6 +1069,7 @@ apiproxy:
     pullPolicy: IfNotPresent
   service:
     port: 80
+    containerPort: 8080
   resources:
     limits:
       cpu: "0.5"
@@ -1090,7 +1091,7 @@ apiproxy:
     bag:
       <<: *commonLocation
       path: /lvbag/individuelebevragingen/v2/
-      targetUrl: "https://lab.api.mijniconnect.nl/iconnect/apihcbrp/actueel/v2/"
+      targetUrl: "https://lab.api.mijniconnect.nl/iconnect/apibagib/v2/"
     brp:
       <<: *commonLocation
       path: /haalcentraal/api/brp/
