--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -246,8 +246,8 @@ loki:
     limits_config:
       allow_structured_metadata: true
       volume_enabled: true
-      retention_period: 90d # 3 months retention
-      max_query_lookback: 90d # 3 months
+      retention_period: 30d # 1 month retention
+      max_query_lookback: 31d # 1 month query lookback
       ingestion_rate_strategy: local # Default: global
       max_global_streams_per_user: 5000
       max_query_length: 744h # 1 month. Default: 721h
