--- a/charts/monitoring-logging/Chart.yaml
+++ b/charts/monitoring-logging/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: monitoring-logging
 description: A monitoring stack using Loki, Prometheus, Promtail and Grafana
 type: application
-version: 0.1.0-dev
-appVersion: "1.0-dev"
+version: 1.0.0
+appVersion: "1.0.0"
 dependencies:
   - name: loki
     repository: "@grafana"
