--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -562,6 +562,70 @@ openarchiefbeheer:
       restartPolicy: OnFailure
     secrets: {}
     data: ""
+    # data: |-
+    #   zgw_consumers_config_enable: true
+    #   zgw_consumers:
+    #     services:
+    #     - identifier: zaken-dimpact-acc
+    #       label: Open Zaak - Zaken API
+    #       api_root: https://example.openzaak.nl/zaken/api/v1/
+    #       api_type: zrc
+    #       auth_type: zgw
+    #       client_id: openarchiefbeheer
+    #       secret: ${oab_openzaak_secret}
+    #     - identifier: documenten-dimpact-acc
+    #       label: Open Zaak - Documenten API
+    #       api_root: https://example.openzaak.nl/documenten/api/v1/
+    #       api_type: drc
+    #       auth_type: zgw
+    #       client_id: openarchiefbeheer
+    #       secret: ${oab_openzaak_secret}
+    #     - identifier: catalogus-dimpact-acc
+    #       label: Open Zaak - Catalogi API
+    #       api_root: https://example.openzaak.nl/catalogi/api/v1/
+    #       api_type: ztc
+    #       auth_type: zgw
+    #       client_id: openarchiefbeheer
+    #       secret: ${oab_openzaak_secret}
+    #     - identifier: besluiten-dimpact-acc
+    #       label: Open Zaak - Besluiten API
+    #       api_root: https://example.openzaak.nl/besluiten/api/v1/
+    #       api_type: brc
+    #       auth_type: zgw
+    #       client_id: openarchiefbeheer
+    #       secret: ${oab_openzaak_secret}
+    #     - identifier: selectielijst
+    #       label: Open Zaak (public) - Selectielijst API
+    #       api_root: https://selectielijst.openzaak.nl/api/v1/
+    #       api_type: orc
+    #       auth_type: no_auth
+
+    #   api_configuration_enabled: true
+    #   api_configuration:
+    #     selectielijst_service_identifier: selectielijst
+
+    #   oidc_db_config_enable: true
+    #   oidc_db_config_admin_auth:
+    #     items:
+    #     - identifier: admin-oidc
+    #       enabled: true
+    #       oidc_rp_client_id: example-client-id
+    #       oidc_rp_client_secret: ${keycloak_client_secret}
+    #       oidc_rp_sign_algo: "RS256"
+    #       oidc_token_use_basic_auth: false
+    #       username_claim:
+    #         - preferred_username
+    #       groups_claim:
+    #         - resource_access
+    #         - example-client-id
+    #         - roles
+    #       superuser_group_names:
+    #         - Superuser
+    #       userinfo_claims_source: userinfo_endpoint
+    #       oidc_rp_idp_sign_key: ""
+    #       endpoint_config:
+    #         oidc_op_discovery_endpoint: https://example.keycloak.nl/realms/podiumd-poc/
+  
 
   tags:
     redis: true
