--- a/charts/kiss/values.yaml
+++ b/charts/kiss/values.yaml
@@ -18,6 +18,7 @@ esuite:
   clientId: kiss
   secret: ""
   contactverzoektypen: []
+  isDefault: true
 
 database:
   host: ""
@@ -80,7 +81,7 @@ frontend:
     name: ""
   image:
     repository: ghcr.io/klantinteractie-servicesysteem/kiss-frontend
-    tag: "deventer"
+    tag: "release-1.0.x-20250418091744-8936963"
     pullPolicy: IfNotPresent
   resources:
     requests:
