--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -36,6 +36,10 @@ dependencies:
     version: 1.3.2
     repository: "@maykinmedia"
     condition: objecttypen.enabled
+  - name: openarchiefbeheer
+    version: 1.3.8
+    repository: "@maykinmedia"
+    condition: openarchiefbeheer.enabled
   - name: openklant
     version: 1.6.3
     repository: "@maykinmedia"
