--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -544,6 +544,318 @@ objecttypen:
           cpu: 10m
           memory: 64Mi
 
+
+openarchiefbeheer:
+  enabled: false
+  nameOverride: openarchiefbeheer
+  fullnameOverride: openarchiefbeheer
+  configuration:
+    enabled: false
+    job:
+      enabled: true
+      backoffLimit: 6
+      ttlSecondsAfterFinished: 0    
+      restartPolicy: OnFailure
+    secrets: {}
+    data: ""
+    # data: |-
+    #   zgw_consumers_config_enable: true
+    #   zgw_consumers:
+    #     services:
+    #     - identifier: zaken-dimpact-acc
+    #       label: Open Zaak - Zaken API
+    #       api_root: https://example.openzaak.nl/zaken/api/v1/
+    #       api_type: zrc
+    #       auth_type: zgw
+    #       client_id: openarchiefbeheer
+    #       secret: ${oab_openzaak_secret}
+    #     - identifier: documenten-dimpact-acc
+    #       label: Open Zaak - Documenten API
+    #       api_root: https://example.openzaak.nl/documenten/api/v1/
+    #       api_type: drc
+    #       auth_type: zgw
+    #       client_id: openarchiefbeheer
+    #       secret: ${oab_openzaak_secret}
+    #     - identifier: catalogus-dimpact-acc
+    #       label: Open Zaak - Catalogi API
+    #       api_root: https://example.openzaak.nl/catalogi/api/v1/
+    #       api_type: ztc
+    #       auth_type: zgw
+    #       client_id: openarchiefbeheer
+    #       secret: ${oab_openzaak_secret}
+    #     - identifier: besluiten-dimpact-acc
+    #       label: Open Zaak - Besluiten API
+    #       api_root: https://example.openzaak.nl/besluiten/api/v1/
+    #       api_type: brc
+    #       auth_type: zgw
+    #       client_id: openarchiefbeheer
+    #       secret: ${oab_openzaak_secret}
+    #     - identifier: selectielijst
+    #       label: Open Zaak (public) - Selectielijst API
+    #       api_root: https://selectielijst.openzaak.nl/api/v1/
+    #       api_type: orc
+    #       auth_type: no_auth
+
+    #   api_configuration_enabled: true
+    #   api_configuration:
+    #     selectielijst_service_identifier: selectielijst
+
+    #   oidc_db_config_enable: true
+    #   oidc_db_config_admin_auth:
+    #     items:
+    #     - identifier: admin-oidc
+    #       enabled: true
+    #       oidc_rp_client_id: example-client-id
+    #       oidc_rp_client_secret: ${keycloak_client_secret}
+    #       oidc_rp_sign_algo: "RS256"
+    #       oidc_token_use_basic_auth: false
+    #       username_claim:
+    #         - preferred_username
+    #       groups_claim:
+    #         - resource_access
+    #         - example-client-id
+    #         - roles
+    #       superuser_group_names:
+    #         - Superuser
+    #       userinfo_claims_source: userinfo_endpoint
+    #       oidc_rp_idp_sign_key: ""
+    #       endpoint_config:
+    #         oidc_op_discovery_endpoint: https://example.keycloak.nl/realms/podiumd-poc/
+  
+
+  tags:
+    redis: true
+
+  replicaCount: 1
+
+  image:
+    tag: "1.0.0"
+
+  service:
+    type: ClusterIP
+    port: 80
+
+  ingress:
+    enabled: false
+    annotations: {}
+    className: ""
+    hosts: []
+    tls: []
+
+  extraIngress: []
+
+  resources:
+    limits: {}
+    requests:
+      cpu: 250m
+      memory: 256Mi
+
+  autoscaling:
+    enabled: false
+    minReplicas: 1
+    maxReplicas: 100
+    targetCPUUtilizationPercentage: 80
+    targetMemoryUtilizationPercentage: 80
+
+  pdb:
+    create: false
+    minAvailable: 1
+    maxUnavailable: ""
+
+  nodeSelector: {}
+
+  tolerations: []
+
+  affinity: {}
+
+  persistence:
+    enabled: true
+    size: 10Gi
+    existingClaim: openarchiefbeheer
+    storageClassName: ""
+    mediaMountSubpath: openarchiefbeheer/media
+    privateMediaMountSubpath: openarchiefbeheer/private_media
+  persistentVolume:
+    volumeAttributeShareName: openarchiefbeheer
+
+  existingSecret: null
+
+  azureVaultSecret:
+    vaultName: null
+    objectName: ""
+    contentType: ""
+    secretName: "{{ .Values.existingSecret }}"
+
+  extraEnvVars: []
+  extraVolumes: []
+  extraVolumeMounts: []
+
+  pythonAppName: openarchiefbeheer
+  settings:
+    allowedHosts: openarchiefbeheer.podiumd.svc.cluster.local
+    # -- Name of the environment (used for displaying purposes)
+    environment: ""
+    requestsReadTimeout: "5000"
+    # -- Number of days to wait before destroying a list. Defaults to 7 in the application.
+    waitingPeriod: ""
+
+    # -- Settings for the database. Note: Open-Archiefbeheer needs the POSTGIS extension to be installed in the database.
+    database:
+      host: ""
+      port: 5432
+      username: ""
+      password: ""
+      name: ""
+      sslmode: prefer
+
+    cookie:
+      sessionCookieSamesite: 'Lax'
+      sessionCookieSecure: true
+      csrfCookieSamesite: 'Lax'
+      csrfCookieSecure: true
+
+    cors:
+      allowedOrigins: ""
+      allowedOriginsRegexes: ""
+      allowAllOrigins: false
+      extraAllowHeaders: ""
+
+    throttling:
+      enable: true
+      rateAnonymous: "2500/hour"
+      rateUser: "15000/hour"
+
+    twoFactorAuthentication:
+      forceOtpAdmin: true
+      patchAdmin: true
+
+    csrf:
+      trustedOrigins: ""
+
+    sentry:
+      dsn: ""
+
+    cache:
+      default: ""
+      axes: ""
+      choices: ""
+
+    celery:
+      brokerUrl: ""
+      resultBackend: ""
+      logLevel: debug
+
+    email:
+      port: 587
+      useTLS: true
+      
+    uwsgi:
+      master: ''
+      threads: ''
+      processes: ''
+      maxRequests: ''
+      harakiri: ''
+
+    frontend:
+      apiUrl: ""
+      apiPath: "/api/v1"
+      zaakUrlTemplate: ""
+
+    frontendUrl: ""
+    retry:
+      total: ""
+      backoffFactor: ""
+      statusForcelist: ""
+
+  worker:
+    label: "1"
+    name: ""
+    queueName: ""
+    replicaCount: 1
+    concurrency: 4
+    podLabels: {}
+    resources: {}
+    livenessProbe: 
+      enabled: false
+      exec:
+        command:
+          - /app/liveness/liveness-probe.sh
+      initialDelaySeconds: 60
+      periodSeconds: 30
+      timeoutSeconds: 10
+      failureThreshold: 3
+      successThreshold: 1
+    autoscaling:
+      enabled: false
+      minReplicas: 1
+      maxReplicas: 100
+      targetCPUUtilizationPercentage: 80
+      targetMemoryUtilizationPercentage: 80
+
+  flower:
+    enabled: true
+    replicaCount: 1
+    podLabels: {}
+    service:
+      type: ClusterIP
+      port: 80
+    livenessProbe: {}
+    readinessProbe: {}
+    resources: {}
+
+  beat:
+    enabled: true
+    replicaCount: 1
+    podLabels: {}
+    livenessProbe: {}
+    readinessProbe: {}
+    resources: {}
+
+  nginx:
+    image:
+      repository: nginxinc/nginx-unprivileged
+      pullPolicy: IfNotPresent
+      tag: stable
+    resources:
+      requests:
+        cpu: 10m
+        memory: 16Mi
+    existingConfigmap: null
+    service:
+      type: ClusterIP
+      port: 8080
+      annotations: {}
+    replicaCount: 1
+    podLabels: {}
+    securityContext:
+      capabilities:
+        drop:
+        - ALL
+      readOnlyRootFilesystem: false
+      runAsNonRoot: true
+      runAsUser: 101
+    autoscaling:
+      enabled: false
+    livenessProbe: {}
+    readinessProbe: {}
+    resources: {}
+
+  redis:
+    nameOverride: openarchiefbeheer-redis
+    fullnameOverride: openarchiefbeheer-redis
+    architecture: standalone
+    auth:
+      enabled: false
+    master:
+      persistence:
+        enabled: true
+        size: 8Gi
+        storageClass: ""
+      resources:
+        requests:
+          cpu: 10m
+          memory: 20Mi
+
 openklant:
   configuration:
     oidcUrl: https://openklant.example.nl
