--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -805,6 +805,116 @@ openformulieren:
 
 openinwoner:
   configuration:
+    enabled: true
+    initContainer:
+      enabled: false
+    job:
+      enabled: true
+      backoffLimit: 6
+      ttlSecondsAfterFinished: 0
+      restartPolicy: OnFailure
+      resources: {}
+    data: ""
+    # data: |-
+    #   oidc_db_config_enable: True
+    #   oidc_db_config_admin_auth:
+    #     items:
+    #     - identifier: admin-oidc
+    #       enabled: True
+    #       oidc_rp_client_id: openinwoner.example.nl
+    #       oidc_rp_client_secret: ${keycloak_client_secret}
+    #       oidc_rp_scopes_list:
+    #       - openid
+    #       - email
+    #       - profile
+    #       - roles
+    #       oidc_rp_sign_algo: RS256
+    #       endpoint_config:
+    #         oidc_op_discovery_endpoint: https://keycloak.example.nl/realms/gemeente-x/
+    #       username_claim:
+    #       - sub
+    #       groups_claim:
+    #       - roles
+    #       claim_mapping:
+    #         first_name:
+    #         - given_name
+    #         last_name:
+    #         - family_name
+    #       sync_groups: true
+    #       sync_groups_glob_pattern: "*"
+    #       default_groups: []
+    #       make_users_staff: true
+    #       superuser_group_names:
+    #       - Superuser
+    #       oidc_use_nonce: true
+    #       oidc_nonce_size: 32
+    #       oidc_state_size: 32
+    #       userinfo_claims_source: id_token
+    #   zgw_consumers_config_enable: True
+    #   zgw_consumers:
+    #     services:
+    #       - identifier: zaken-test
+    #         label: Open Zaak - Zaken API
+    #         api_root: https://openzaak.example.nl/zaken/api/v1/
+    #         api_type: zrc
+    #         auth_type: zgw
+    #         client_id: openinwoner
+    #         secret: ${openzaak_openinwoner_secret}
+    #       - identifier: documenten-test
+    #         label: Open Zaak - Documenten API
+    #         api_root: https://openzaak.example.nl/documenten/api/v1/
+    #         api_type: drc
+    #         auth_type: zgw
+    #         client_id: openinwoner
+    #         secret: ${openzaak_openinwoner_secret}
+    #       - identifier: catalogi-test
+    #         label: Open Zaak - Catalogi API
+    #         api_root: https://openzaak.example.nl/catalogi/api/v1/
+    #         api_type: ztc
+    #         auth_type: zgw
+    #         client_id: openinwoner
+    #         secret: ${openzaak_openinwoner_secret}
+    #       - identifier: besluiten-test
+    #         label: Open Zaak - Besluiten API
+    #         api_root: https://openzaak.example.nl/besluiten/api/v1/
+    #         api_type: brc
+    #         auth_type: zgw
+    #         client_id: openinwoner
+    #         secret: ${openzaak_openinwoner_secret}
+    #       - identifier: selectielijst
+    #         label: Open Zaak (public) - Selectielijst API
+    #         api_root: https://selectielijst.openzaak.nl/api/v1/
+    #         api_type: orc
+    #         auth_type: no_auth
+    #   openzaak_config_enable: true
+    #   openzaak_config:
+    #     zaak_max_confidentiality: openbaar
+    #     document_max_confidentiality: vertrouwelijk
+    #     max_upload_size: 50
+    #     skip_notification_statustype_informeren: false
+    #     reformat_esuite_zaak_identificatie: true
+    #     derive_zaak_titel_from: zaaktype_omschrijving
+    #     order_statuses_by_date_set: false
+    #     title_text: title text from setup configuration
+    #     enable_categories_filtering_with_zaken: true
+    #     action_required_deadline_days: 1874
+    #     zaken_filter_enabled: 'true'
+    #     allowed_file_extensions:
+    #       - .pdf
+    #       - .txt
+    #       - .doc
+    #       - .docx        
+    #     api_groups:
+    #       - zaken_api_identifier: zaken-test
+    #         documenten_api_identifier: documenten-test
+    #         catalogi_api_identifier: catalogi-test
+    #         fetch_eherkenning_zaken_with_rsin: true    
+    #   sites_config_enable: true
+    #   sites_config:
+    #     items:
+    #       - domain: openinwoner.example.nl
+    #         name: Gemeente X
+    secrets: {}    
     oidcUrl: https://openinwoner.example.nl
     oidcSecret: "<openinwoner>"
   settings:
