--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -96,9 +96,15 @@ grafana:
       allow_sign_up: true
     server:
       domain: "https://logs.test.nl/"
+      enforce_domain: true
       root_url: "https://logs.test.nl/"
     metrics:
       enabled: false  
+    security:
+      cookie_secure: true
+      cookie_samesite: strict
+      content_security_policy: true
+      content_security_policy_template: "script-src 'self' 'unsafe-eval' 'unsafe-inline' 'strict-dynamic' $NONCE;object-src 'none';font-src 'self';style-src 'self' 'unsafe-inline' blob:;img-src * data:;base-uri 'self';connect-src 'self' grafana.com ws://$ROOT_PATH wss://$ROOT_PATH;manifest-src 'self';media-src 'none';form-action 'self';"
       
   image:
     pullPolicy: IfNotPresent
