--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -105,6 +105,10 @@ grafana:
       cookie_samesite: lax
       content_security_policy: true
       content_security_policy_template: "script-src 'self' 'unsafe-eval' 'unsafe-inline' 'strict-dynamic' $NONCE;object-src 'none';font-src 'self';style-src 'self' 'unsafe-inline' blob:;img-src * data:;base-uri 'self';connect-src 'self' grafana.com ws://$ROOT_PATH wss://$ROOT_PATH;manifest-src 'self';media-src 'none';form-action 'self';"
+      hide_version: true
+    auth.anonymous:
+      enabled: false     # Ensure anonymous access is disabled
+      hide_version: true # Add this to explicitly hide version for anonymous users
       
   image:
     pullPolicy: IfNotPresent
