feat: kiss 1.0.1 configuratie aanpassingen (#76)
Met deze wijzigingen kan je KISS 1.0.1 draaien met de bestaande values.
Let op: met deze wijzigingen is er nog GEEN manier om kiss naast de
esuite ook met openzaak + openklant 2.7 te koppelen. Eventueel kan ik
hier ook een voorzet voor doen maar daar is denk ik meer afstemming voor
nodig.

---------

Co-authored-by: PascalIcatt <38104517+PascalIcatt@users.noreply.github.com>
Co-authored-by: infojohn <john@info.nl>

--- a/charts/kiss/values.yaml
+++ b/charts/kiss/values.yaml
@@ -18,6 +18,7 @@ esuite:
   clientId: kiss
   secret: ""
   contactverzoektypen: []
+  isDefault: true
 
 database:
   host: ""
@@ -80,7 +81,7 @@ frontend:
     name: ""
   image:
     repository: ghcr.io/klantinteractie-servicesysteem/kiss-frontend
-    tag: "deventer"
+    tag: "v1.0.1"
     pullPolicy: IfNotPresent
   resources:
     requests:
